[package]
name = "cowl-swap"
version = "1.0.0"
edition = "2021"

[dependencies]
casper-contract = { version = "4.0.0", optional = true }
casper-types = "4.0.1"
casper-event-standard = { version = "0.5.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }

[[bin]]
name = "cowl_swap"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "deposit_cspr_session"
path = "src/deposit_cspr_session.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "deposit_cowl_session"
path = "src/deposit_cowl_session.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "cspr_to_cowl_session"
path = "src/cspr_to_cowl_session.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "cowl_to_cspr_session"
path = "src/cowl_to_cspr_session.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "balance_cowl_session"
path = "src/balance_cowl_session.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["contract-support"]
contract-support = ["dep:casper-contract"]
